GNU SASL NEWS -- History of user-visible changes.
Copyright (C) 2002-2012 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.8.1 (unreleased) [stable]

** i18n: Updated translations.

* Version 1.8.0 (released 2012-05-28) [stable]

** This is a new major stable release.  Brief changes compared to 1.6.x:

*** SAML20 support following RFC 6595.

*** OPENID20 support following RFC 6616.

*** Added SMTP server examples (for e.g., SCRAM, SAML20, OPENID20).

*** Various cleanups, portability and other bug fixes.
See the NEWS entries during the 1.7.x branch for details.

* Version 1.7.6 (released 2012-05-23) [beta]

** i18n: Updated translations.

** Build fixes.

* Version 1.7.5 (released 2012-05-22) [beta]

** i18n: Updated translations.

** Build fixes.

* Version 1.7.4 (released 2012-05-16) [alpha]

** Doc fixes and updates for the callback/property change in the library.
See lib/NEWS for details.  This affects SAML and OpenID.

** Slight fixes to Windows build script.

* Version 1.7.3 (released 2012-04-03) [alpha]

** The SAML20 mechanism has been updated and is now enabled by default.

** Doc fixes and updates for the callback/property change in the library.
See lib/NEWS for details.

** examples: Added example SMTP server with SAML 2.0 support.
See examples/saml20/README.  It uses Lasso as the SAML implementation.
You may disable Lasso by using --without-lasso.  Note that Lasso is
only needed for this example server, it is not needed by the GNU SASL
library or command line tools itself.

* Version 1.7.2 (released 2012-03-28) [alpha]

** gsasl: The client lets the server decide when authentication is complete.
Before the client quit from the authentication loop when the local
mechanism was finished, but some mechanisms (OPENID20) have optional